<resources>
    <string name="app_name">MyPersonalApp</string>
    <string name="TitleStartItalian">Итальянский</string>
    <string name="TitleLearnNewWords">Новые слова</string>
    <string name="TitleLearnOldWords">Старые слова</string>
    <string name="HintFirstWord">Введите слово на итальянском</string>
    <string name="HintSecondWord">Введите перевод слова</string>
    <string name="MarkNew">Это слово новое</string>
    <string name="MarkOld">Это слово старое</string>
    <string name="CheckNew">Учить новые слова</string>
    <string name="CheckOld">Вспомнить старые слова</string>
    <string name="HowMuch1">Вы выучили уже: </string>
    <string name="HowMuch2">Из них новых:</string>
    <string name="HowMuch3">Старых:</string>
    <string name="Message">Attention, please</string>
    <string name="Close">Закрыть</string>
    <string name="AddWord">Добавить слово</string>
    <string name="SaveAndExit">Сохранить и выйти</string>
    <string name="SaveAndNext">Сохранить и ввести следующее слово</string>
    <string name="WrongFormat">Неверное форматирование в строке: </string>
</resources>
