<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWordActivity"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintFirstWord"
        android:layout_marginTop="40dp"
        android:id="@+id/FirstWord"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintSecondWord"
        android:layout_marginTop="40dp"
        android:id="@+id/SecondWord"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MarkNew"
            android:id="@+id/ItIsNewRb"
            android:checked="true"
            android:onClick="ChangeRadio"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MarkOld"
            android:id="@+id/ItIsOldRb"
            android:onClick="ChangeRadio"
            />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:id="@+id/SaveAndNext"
        android:text="@string/SaveAndNext"
        android:layout_marginTop="40dp"
        android:onClick="CheckWords"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:id="@+id/SaveAndExit"
        android:text="@string/SaveAndExit"
        android:layout_marginTop="40dp"
        />

</LinearLayout>